--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
