--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-swipeable": "^7.0.1",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
