--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
+    "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
   },
