--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "sharp": "^0.33.4",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
