--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "sharp": "^0.33.4",
+    "sweetalert2": "^11.12.4",
     "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
