--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/ui/reward-card"
+    "reward-card"
   ],
   "exclude": ["node_modules"]
 }
