--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "aos": "^2.3.4",
     "flowbite-react": "^0.10.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
