--- a/.env.local.example
+++ b/.env.local.example
@@ -17,3 +17,10 @@ AUTH_GITHUB_SECRET="your_github_secret"
 
 # Resend
 AUTH_RESEND_KEY="your_resend_key"
+
+# FreeCurrencyAPI
+NEXT_PUBLIC_FREE_CURRENCY_API_KEY="fca_live_jDqUTcYj3stjWVDFqGZCmIBAt3hIEEtiTBPSMD3N"
+
+# Bluelytics
+NEXT_PUBLIC_BLUELYTICS_API_URL="https://api.bluelytics.com.ar/v2/latest"
+NEXT_PUBLIC_FREE_CURRENCY_APY_KEY=fca_live_jDqUTcYj3stjWVDFqGZCmIBAt3hIEEtiTBPSMD3N
