--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@paypal/react-paypal-js": "^8.6.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "flowbite-react": "^0.10.1",
+    "i": "^0.3.7",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "npm": "^10.8.3",
     "postcss-functions": "^4.0.2",
     "postcss-js": "^4.0.1",
     "postcss-nested": "^6.2.0",
