--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@paypal/react-paypal-js": "^8.6.0",
     "autoprefixer": "^10.4.20",
     "flowbite-react": "^0.10.1",
     "next": "14.2.5",
