--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@paypal/react-paypal-js": "^8.6.0",
+    "@react-spring/web": "^9.7.4",
     "autoprefixer": "^10.4.20",
     "flowbite-react": "^0.10.1",
     "next": "14.2.5",
@@ -38,6 +39,7 @@
     "react-swipeable": "^7.0.1",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.6.13",
+    "swiper": "^11.1.12",
     "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
