--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-select": "^5.8.0",
     "react-swipeable": "^7.0.1",
     "sharp": "^0.33.4",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.4",
     "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
