--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
           PR_URL: ${{ github.event.pull_request.html_url }}
           PR_USER: ${{ github.event.pull_request.user.login }}
           PR_BASE_BRANCH: ${{ github.event.pull_request.base.ref }}
+          PR_BODY: ${{ github.event.pull_request.body }}
+          REPO_NAME: ${{ github.event.repository.full_name }}
         run: |
           curl -X POST -H "Content-Type: application/json" \
-          -d "{\"content\": \":rocket: **Actualización en la rama \`$PR_BASE_BRANCH\`** :rocket:\n\nSe realizaron actualizaciones en la rama \`$PR_BASE_BRANCH\`. La rama ha sido actualizada con los cambios de la siguiente PR: [Ver detalles]($PR_URL).\"}" \
+          -d "{\"content\": \":rocket: **Actualización en el repositorio \`$REPO_NAME\` en la rama \`$PR_BASE_BRANCH\`** :rocket:\n\nSe realizaron actualizaciones en la rama \`$PR_BASE_BRANCH\`. La rama ha sido actualizada con los cambios de la siguiente PR: [Ver detalles]($PR_URL).\n\n\nLos cambios realizados son:\n \"$PR_BODY\"}" \
           $DISCORD_WEBHOOK_URL
