--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
           REPO_NAME: ${{ github.event.repository.full_name }}
         run: |
           curl -X POST -H "Content-Type: application/json" \
-          -d "{\"content\": \":rocket: **Actualización en el repositorio \`$REPO_NAME\` en la rama \`$PR_BASE_BRANCH\`** :rocket:\n\nSe realizaron actualizaciones en la rama \`$PR_BASE_BRANCH\`. La rama ha sido actualizada con los cambios de la siguiente PR: [Ver detalles]($PR_URL).\n\n\nLos cambios realizados son:\n \"$PR_BODY\"}" \
+          -d "{\"content\": \":rocket: **Actualización en el repositorio \`$REPO_NAME\` en la rama \`$PR_BASE_BRANCH\`** :rocket:\n\nSe realizaron actualizaciones en la rama \`$PR_BASE_BRANCH\`. La rama ha sido actualizada con los cambios de la siguiente PR: [Ver detalles]($PR_URL).\
           $DISCORD_WEBHOOK_URL
