--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "sharp": "^0.33.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.12",
