--- a/package.json
+++ b/package.json
@@ -61,11 +61,16 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "5.4.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,json,md}": "prettier --write"
   }
 }
