fix: corregir configuración de lint-staged

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "reward-card"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "reward-card"],
   "exclude": ["node_modules"]
 }
