--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write .",
     "lint": "next lint",
     "start": "next start",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "prepare": "husky && husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -29,6 +30,7 @@
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react": "^7.36.1",
     "flowbite-react": "^0.10.1",
+    "git-commit-msg-linter": "^5.0.8",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "postcss-functions": "^4.0.2",
@@ -61,16 +63,13 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
+    "husky": "^8.0.0",
+    "lint-staged": "^12.3.2",
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "5.4.5"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,json,md}": "prettier --write"
   }
 }
