--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@vercel/style-guide": "^6.0.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "14.2.5",
