--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
