--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "git-commit-msg-linter": "^5.0.8",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "path-to-regexp": "^8.2.0",
     "postcss-functions": "^4.0.2",
     "postcss-js": "^4.0.1",
     "postcss-nested": "^6.2.0",
@@ -47,6 +48,7 @@
     "react-swipeable": "^7.0.1",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.12",
