--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "eslint-plugin-react": "^7.36.1",
     "flowbite-react": "^0.10.1",
     "git-commit-msg-linter": "^5.0.8",
@@ -52,6 +53,7 @@
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.12",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
@@ -64,6 +66,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "@vercel/style-guide": "^6.0.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8.50.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
