feat: logica y verificaciones en calculadora

--- a/.env.local.example
+++ b/.env.local.example
@@ -37,3 +37,6 @@ NEXT_PUBLIC_FREE_CURRENCY_APY_KEY=fca_live_jDqUTcYj3stjWVDFqGZCmIBAt3hIEEtiTBPSM
 
 # PayPal Client ID
 NEXT_PUBLIC_PAYPAL_CLIENT_ID="Acdb_cNhM35Qa7UNeEpdSePRS6Oswvx5ohLo1KEC04ADt64RGPUuOMUZXN_Kt84b93RXFFujqDKjB8u1"
+
+# Rest Countries
+NEXT_PUBLIC_REST_COUNTRIES_API_URL="https://restcountries.com/v3.1/all"
