--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "clean": "rimraf .next/export",
+    "build": "npm run clean && next build",
     "dev": "next dev",
     "format": "prettier --write .",
     "lint": "next lint",
@@ -75,6 +76,7 @@
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.10",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "5.4.5"
