--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf .next/export",
-    "build": "npm run clean && next build",
+    "build": "next build",
     "dev": "next dev",
     "format": "prettier --write .",
     "lint": "next lint",
