--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-textshadow": "^2.1.3",
     "use-debounce": "^10.0.0",
     "zustand": "^4.5.5"
