--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "motion": "^12.0.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-seo": "^6.6.0",
     "path-to-regexp": "^8.2.0",
     "postcss-functions": "^4.0.2",
     "postcss-js": "^4.0.1",
