--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-nested": "^6.2.0",
     "purgecss": "^6.0.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
