fix: actualizo dependencias y modificacion de  .env.local

--- a/.env.local.example
+++ b/.env.local.example
@@ -33,4 +33,4 @@ NEXT_PUBLIC_VALUE_TIME='https://script.google.com/macros/s/AKfycbzoeZAqxVsuLDz8u
 
 NEXT_PUBLIC_PAYPAL_CLIENT_ID="Acdb_cNhM35Qa7UNeEpdSePRS6Oswvx5ohLo1KEC04ADt64RGPUuOMUZXN_Kt84b93RXFFujqDKjB8u1"
 
-NEXT_PUBLIC_REST_COUNTRIES_API_URL="https://restco"
+NEXT_PUBLIC_REST_COUNTRIES_API_URL="https://restcountries.com/v3.1/all"
