--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@next/third-parties": "^15.1.6",
     "@paypal/react-paypal-js": "^8.6.0",
     "@react-spring/web": "^9.7.4",
     "@vercel/analytics": "^1.3.1",
