--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.14.5",
+    "sweetalert2": "^11.16.0",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar": "^3.1.0",
