--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-plugin-react": "^7.36.1",
     "flowbite-react": "^0.10.1",
     "git-commit-msg-linter": "^5.0.8",
