--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-react": "^7.36.1",
