--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^4.1.0",
     "eslint-plugin-react": "^7.36.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.23.3",
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.0",
