--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.5.0",
