--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.16.0",
     "sweetalert2-react-content": "^5.1.0",
